--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
             <h1>Web App</h1>
         </header>
 
-        <main></main>
+        <main>
+            <input type="text" id="name-input" />
+            <input type="button" value="submit" id="button" />
+            <h1>Hello my name is</h1>
+            <h2 id="display-name"></h2>
+        </main>
 
         <footer>&copy;2022 Software Developer</footer>
 
