--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <body>
         <header>
             <img src="/assets/html_css_js.png" />
+            <!-- checking -->
             <h1>Web App</h1>
         </header>
 
